<resources>
    <string name="app_name">Belt Syllabus</string>
    <string name="bottomNavBar">Running the Example</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_belts">Belt Syllabus</string>
    <string name="title_about">About</string>
    <string name="title_selected_belt">Grading Material</string>
    <string name="title_requirements">Requirements</string>
    <string name="title_patterns">Patterns</string>
    <string name="title_terminologies">Terminology</string>
    <string name="english_text">English text</string>
    <string name="korean_text">Korean text</string>
    <string name="requirement_text">Requirement text</string>
    <string name="category">Category text</string>
    <string name="pattern_item_name">Name of pattern\'s item</string>
    <string name="meaning_pattern">Some text of meaning</string>
    <string name="name_about_app">Taekwondo Belt</string>
    <string name="about_text1">Upgrade Taekwondo Belt app is created for Taekwon-Do students as a support tool to browse and learn grading material in preparation for their next belt.</string>
    <string name="about_text2">The app may not cover all grading requirements and may contain mistakes.</string>
    <string name="about_text3">If you would like to contribute to the project or support it, please contact us.</string>
    <string name="about_version">Build some version</string>
    <string name="about_button">Contact us</string>
</resources>