<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/beltsFragment">

    <fragment
        android:id="@+id/navigation_requirements"
        android:name="com.stargiant.taekwbelt.ui.requirements.RequirementsFragment"
        android:label="@string/title_requirements"
        tools:layout="@layout/fragment_requirements" >
        <argument
            android:name="parserRequir"
            app:argType="com.stargiant.taekwbelt.models.UBGradingRequirement[]" />
    </fragment>

    <fragment
        android:id="@+id/navigation_patterns"
        android:name="com.stargiant.taekwbelt.ui.patterns.PatternsFragment"
        android:label="@string/title_patterns"
        tools:layout="@layout/fragment_patterns" >
        <argument
            android:name="parserPattern"
            app:argType="com.stargiant.taekwbelt.models.UBGradingPattern[]" />
    </fragment>
    <fragment
        android:id="@+id/navigation_terminologies"
        android:name="com.stargiant.taekwbelt.ui.terminologies.TerminologiesFragment"
        android:label="@string/title_terminologies"
        tools:layout="@layout/fragment_terminologies" >
        <argument
            android:name="parserTerminologies"
            app:argType="com.stargiant.taekwbelt.models.UBTerminologyItem[]" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.stargiant.taekwbelt.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/beltsFragment"
        android:name="com.stargiant.taekwbelt.ui.belts.BeltsFragment"
        android:label="@string/title_belts"
        tools:layout="@layout/fragment_belts" >
        <action
            android:id="@+id/action_beltsFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.stargiant.taekwbelt.ui.categories.CategoriesFragment"
        android:label="@string/title_selected_belt"
        tools:layout="@layout/selected_belt" >
        <action
            android:id="@+id/action_categoriesFragment_to_navigation_requirements"
            app:destination="@id/navigation_requirements" />
        <action
            android:id="@+id/action_categoriesFragment_to_navigation_patterns"
            app:destination="@id/navigation_patterns" />
        <action
            android:id="@+id/action_categoriesFragment_to_navigation_terminologies"
            app:destination="@id/navigation_terminologies" />
        <argument
            android:name="parserItem"
            app:argType="com.stargiant.taekwbelt.models.UBGradingItem" />
        <argument
            android:name="imageFromBeltsFragment"
            app:argType="integer" />
    </fragment>


</navigation>