<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <TextView
        android:id="@+id/text_name_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/name_about_app"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/text_about1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/about_text1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/text_name_about"
        app:layout_constraintBottom_toTopOf="@id/text_about2"/>

    <TextView
        android:id="@+id/text_about2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_text2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/text_about1"
        app:layout_constraintBottom_toTopOf="@id/text_about3"/>

    <TextView
        android:id="@+id/text_about3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_text3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/text_about2"
        app:layout_constraintBottom_toTopOf="@id/text_about_version"/>
    <TextView
        android:id="@+id/text_about_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_version"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/text_about3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <Button
        android:id="@+id/btn_contactUs"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_about_version"
        app:layout_constraintVertical_bias="0.3"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>